--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,16 +19,34 @@ spring:
           content:
             enabled: true
             paths: /**
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://121.37.30.244:3306/friends?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+    #url: jdbc:mysql://localhost:3306/login?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+    username: root
+    #password: root
+    password: dfc77
+
 eureka:
   client:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      #defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://121.37.30.244:8761/eureka/
   instance:
-    instance-id: http://localhost:8760
+    #instance-id: http://localhost:8760
+    instance-id: http://121.37.30.244:8760
     prefer-ip-address: true
 ribbon:
   eureka:
     enable: true
+
+mybatis:
+  mapperLocations: classpath:/mapper.xml
+  typeAliasesPackage: com.imooc.javabean
+centos:
+  path: /home/uploadFile/
+  #path: E:\\exercise\\
+  copyFileDesPath: /home/copyFile/222.txt
 
