--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,11 +21,11 @@ spring:
             paths: /**
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://121.37.30.244:3306/friends?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
-    #url: jdbc:mysql://localhost:3306/login?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+    #url: jdbc:mysql://121.37.30.244:3306/friends?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/login?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
     username: root
-    #password: root
-    password: dfc77
+    password: root
+    #password: dfc77
 
 eureka:
   client:
@@ -46,7 +46,8 @@ mybatis:
   mapperLocations: classpath:/mapper.xml
   typeAliasesPackage: com.imooc.javabean
 centos:
-  path: /home/uploadFile/
-  #path: E:\\exercise\\
-  copyFileDesPath: /home/copyFile/222.txt
+  #path: /home/uploadFile/
+  path: E:\\exercise\\
+  #copyFileDesPath: /home/copyFile/222.txt
+  copyFileDesPath: E:\\exercise\\222.txt
 
